syntax = "proto3";

option csharp_namespace = "PROYCUATRO";

service CCotizacionDetalleService{    
    rpc GetCotizacionDetalle(GetCCotizacionDetaRequest) returns (stream GetCCotizacionDetaResponse);
   
}

message CCotizacionDeta{
    string cod_empresa = 1;
    string num_cotizacion = 2;
    string num_cotizacion_detalle = 3;
    string num_cantidad = 4;
    string num_producto = 5;
    string nom_producto = 6; 
    string Embalaje = 7;    
    string obs_usuario = 8; 
}

message GetCCotizacionDetaRequest {
    string pcod_empresa = 1; // Codigo de empresa referenciada del core para el que se ejecuta el proceso,
    string pcod_usuario_windows = 2; // Codigo de usuario que ejecuta el proceso
    string pnum_cotizacion    = 3; // Codigo de usuario que ejecuta el proceso
    string pnum_cotizacion_deta    = 4; // Codigo de usuario que ejecuta el proceso
}

message GetCCotizacionDetaResponse {
    CCotizacionDeta CCotizacionDetaOrden = 1;
    string perror_tecnico = 2; // Mensaje de error técnico del error ocurrido. Si todo está bien se retorna el valor 000000
    string perror_usuario = 3; // En caso de ocurrir un error, se retorna el mensaje en len
}