syntax = "proto3";

option csharp_namespace = "PROYCUATRO";

service CListaAdjuntosService{    
    rpc GetAdjuntos(GetCAdjuntosRequest) returns (stream GetCAdjuntosResponse);
}

message CAdjuntosOrden{
    string cod_empresa = 1;
    string num_orden_compra = 2;
    string  num_archivo = 3;
    string  cod_documento = 4;
    string  tipo_documento = 5;
    string  nom_archivo = 6; 
    string  rut_archivo = 7;
    string  usr_adiciona = 8;
    string  fec_adiciona = 9;
}


/* client asking for all locations */
message GetCAdjuntosRequest {
    string pcod_empresa = 1; // Codigo de empresa referenciada del core para el que se ejecuta el proceso,
    string pcod_usuario_windows = 2; // Codigo de usuario que ejecuta el proceso
    string num_orden_compra    = 3; // Codigo de usuario que ejecuta el proceso
}

/* response with all locations */
message GetCAdjuntosResponse {
    CAdjuntosOrden CAdjuntos = 1;
    string perror_tecnico = 2; // Mensaje de error técnico del error ocurrido. Si todo está bien se retorna el valor 000000
    string perror_usuario = 3; // En caso de ocurrir un error, se retorna el mensaje en len
}