syntax = "proto3";

option csharp_namespace = "PROYCUATRO";

service CListaAprobadoresService{    
    rpc GetAprobadores(GetCAprobadoresRequest) returns (stream GetCAprobadoresResponse);
}

message CAprobadoresOrden{
    string cod_empresa = 1;
    string num_orden_compra = 2;
    string  cod_usuario = 3;
    string  nom_usuario = 4;
    string  fec_resolucion = 5;
    string  nom_estado = 6;
    string  obs_usuario = 7;
}


/* client asking for all locations */
message GetCAprobadoresRequest {
    string pcod_empresa = 1; // Codigo de empresa referenciada del core para el que se ejecuta el proceso,
    string pcod_usuario_windows = 2; // Codigo de usuario que ejecuta el proceso
    string num_orden_compra    = 3; // Codigo de usuario que ejecuta el proceso
}

/* response with all locations */
message GetCAprobadoresResponse {
    CAprobadoresOrden CAprobador = 1;
    string perror_tecnico = 2; // Mensaje de error técnico del error ocurrido. Si todo está bien se retorna el valor 000000
    string perror_usuario = 3; // En caso de ocurrir un error, se retorna el mensaje en len
}