syntax = "proto3";

option csharp_namespace = "PROYCUATRO";

service OrdenesCompraService{    
    rpc GetOrdenes(GetOrdenesRequest) returns (stream GetOrdenesResponse);
}

message OrdenesCompra{
    string cod_empresa = 1;
    string num_orden_compra = 2;
    string tit_orden_compra = 3;
    string fec_orden = 4;
    string num_autorizacion = 5;
    string num_comparativo = 6;   
}


/* client asking for all locations */
message GetOrdenesRequest {
    string pcod_empresa = 1; // Codigo de empresa referenciada del core para el que se ejecuta el proceso,
    string pcod_usuario_windows = 2; // Codigo de usuario que ejecuta el proceso
}

/* response with all locations */
message GetOrdenesResponse {
    OrdenesCompra ordencompra = 1;
    string perror_tecnico = 2; // Mensaje de error técnico del error ocurrido. Si todo está bien se retorna el valor 000000
    string perror_usuario = 3; // En caso de ocurrir un error, se retorna el mensaje en len
}